--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,23 +17,7 @@ services:
     networks: 
       - teamup
 
-  db:
-    image: mysql:8
-    container_name: team-up-db
-    restart: unless-stopped
-    environment:
-      MYSQL_DATABASE: ${DB_DATABSE}
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-      MYSQL_USER: ${DB_USERNAME}
-      SERVICE_TAGS: dev
-      SERVICE_NAME: mysql
-    volumes:
-      - ./docker-compose/mysql:/docker-entrypoint-initdb.d
-    networks:
-      - teamup
-
-  nginx:  
+  nginx:
     image: nginx:alpine
     container_name: team-up-nginx
     restart: unless-stopped
@@ -44,6 +28,21 @@ services:
       - ./docker-compose/nginx:/etc/nginx/conf.d
     networks:
       - teamup
+
+  db:
+    image: mysql:8
+    container_name: team-up-db
+    restart: unless-stopped
+    environment:
+      MYSQL_DATABASE: teamup_db
+      MYSQL_ROOT_PASSWORD: 1234
+      MYSQL_PASSWORD: 1234
+      MYSQL_USER: teamup
+    volumes:
+      - ./docker-compose/mysql:/docker-entrypoint-initdb.d
+    networks:
+      - teamup
+
 
 networks: 
   teamup:
