--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,12 +34,10 @@ services:
     container_name: team-up-db
     restart: unless-stopped
     environment:
-      MYSQL_DATABASE: teamup_db
-      MYSQL_ROOT_PASSWORD: 1234
-      MYSQL_PASSWORD: 1234
-      MYSQL_USER: teamup
-    volumes:
-      - ./docker-compose/mysql:/docker-entrypoint-initdb.d
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_USER: ${DB_USERNAME}
     networks:
       - teamup
 
